apps/prod/rbx-maestro/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rbx-maestro
  labels:
    app.kubernetes.io/name: rbx-maestro
    app.kubernetes.io/part-of: rbx-platform
