apps/prod/rbx-maestro/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rbx-maestro
  namespace: rbx-maestro
  labels:
    app.kubernetes.io/name: rbx-maestro
spec:
  selector:
    app.kubernetes.io/name: rbx-maestro
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
